@@ -13,6 +13,7 @@
 * Replaced QByteArray by std::string.
 * Moved SphereTransmit functions to its own source file.
 * Updated Object class to use SphereTransmit functions.
+* Renamed SphereTransmit to DataTransmit.
 
 SphereSim 3.0.2:
 * Fixed Viewer linking.
